--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "node-schedule": "^2.1.1",
     "sharp": "^0.33.5",
     "svg-captcha": "^1.4.0",
     "uuid": "^10.0.0"
